example-log-bundle/w-guard-wg-cp-svtk6-lqtxw-2026-01-07_23_33_12/networking/iptablessave
# Generated by iptables-save v1.8.7 on Wed Jan  7 23:34:21 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:NX-7roTexQ3fGRfU" -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:JkYr4aB8O4_N8NBS" -j MARK --set-xmark 0x0/0x1b0000
-A cali-POSTROUTING -m comment --comment "cali:nO0nbHA3Or7V6l7t" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:mgxNjIoKySH7TEGH" -m comment --comment "Host endpoint policy accepted packet." -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -j ACCEPT
COMMIT
# Completed on Wed Jan  7 23:34:21 2026
# Generated by iptables-save v1.8.7 on Wed Jan  7 23:34:21 2026
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-rpf-skip - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:clI8WObfCl4yhr60" -j MARK --set-xmark 0x0/0x1b0000
-A cali-OUTPUT -m comment --comment "cali:ZbkN6P8OdRcBRPpU" -j cali-to-host-endpoint
-A cali-OUTPUT -p udp -m comment --comment "cali:ry5_UEpt1OaPPCxO" -j NOTRACK
-A cali-OUTPUT -m comment --comment "cali:MGhICIksKDnYMIkW" -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:DQ6LK2guiBRMyrLK" -j MARK --set-xmark 0x0/0x1b0000
-A cali-PREROUTING -p udp -m comment --comment "cali:sIsu2aAqNN6K3YYn" -j NOTRACK
-A cali-PREROUTING -i cali+ -m comment --comment "cali:W0qKAga6QivxLxL1" -j MARK --set-xmark 0x80000/0x80000
-A cali-PREROUTING -m comment --comment "cali:QOYCZUivPyJL6Dp1" -j cali-rpf-skip
-A cali-PREROUTING -m comment --comment "cali:uvipz_NmQPrGYnTB" -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:pj4jqF0K2OCNLmzX" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Jefg6QI5khJcHnVl" -j ACCEPT
COMMIT
# Completed on Wed Jan  7 23:34:21 2026
# Generated by iptables-save v1.8.7 on Wed Jan  7 23:34:21 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-from-wl-dispatch-4 - [0:0]
:cali-from-wl-dispatch-6 - [0:0]
:cali-fw-cali40a2bb3ea25 - [0:0]
:cali-fw-cali436ce3cef50 - [0:0]
:cali-fw-cali4611030f6e0 - [0:0]
:cali-fw-cali4e366eba6b4 - [0:0]
:cali-fw-cali622a93eb23b - [0:0]
:cali-fw-cali6c12df98eb6 - [0:0]
:cali-fw-calicff72b3391d - [0:0]
:cali-pi-_8rTIryhbLDXLydt7Zyq - [0:0]
:cali-po-_8rTIryhbLDXLydt7Zyq - [0:0]
:cali-pri-_7bnNHSm00P51QAo5Qe - [0:0]
:cali-pri-_Jt5JQO28LboxWwRucA - [0:0]
:cali-pri-_XnQ5h_hZf854SLqzqE - [0:0]
:cali-pri-_deDmtCOemYXSj_UG1n - [0:0]
:cali-pri-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.calico-system - [0:0]
:cali-pri-kns.cattle-system - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_7bnNHSm00P51QAo5Qe - [0:0]
:cali-pro-_Jt5JQO28LboxWwRucA - [0:0]
:cali-pro-_XnQ5h_hZf854SLqzqE - [0:0]
:cali-pro-_deDmtCOemYXSj_UG1n - [0:0]
:cali-pro-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.calico-system - [0:0]
:cali-pro-kns.cattle-system - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-to-wl-dispatch-4 - [0:0]
:cali-to-wl-dispatch-6 - [0:0]
:cali-tw-cali40a2bb3ea25 - [0:0]
:cali-tw-cali436ce3cef50 - [0:0]
:cali-tw-cali4611030f6e0 - [0:0]
:cali-tw-cali4e366eba6b4 - [0:0]
:cali-tw-cali622a93eb23b - [0:0]
:cali-tw-cali6c12df98eb6 - [0:0]
:cali-tw-calicff72b3391d - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -m nfacct --nfacct-name  ct_state_invalid_dropped_pkts -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.43.126.84/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-windows-exporter:windows-metrics has no endpoints" -j REJECT --reject-with icmp-port-unreachable
-A cali-FORWARD -m comment --comment "cali:W_vvds1Nw3n9QE2f" -j MARK --set-xmark 0x0/0x1a0000
-A cali-FORWARD -m comment --comment "cali:ZfgmjuiLaA8Pg0kp" -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:tAzwBLPaV-j53OOZ" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:4Z0Pf0byo05NFe-P" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:hQ7Oc16wmUtLuneJ" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:rnKNH2WxGcRQcIlD" -j cali-cidr-block
-A cali-INPUT -p udp -m comment --comment "cali:J76FwxInZIsk7uKY" -m comment --comment "Allow IPv4 VXLAN packets from allowed hosts" -m multiport --dports 4789 -m set --match-set cali40all-vxlan-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p udp -m comment --comment "cali:EDCNTTxYfggApx8C" -m comment --comment "Drop IPv4 VXLAN packets from non-allowed hosts" -m multiport --dports 4789 -m addrtype --dst-type LOCAL -j DROP
-A cali-INPUT -p udp -m comment --comment "cali:asErs_iff2sbqgJA" -m comment --comment "Allow incoming IPv4 Wireguard packets" -m multiport --dports 51820 -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -i cali+ -m comment --comment "cali:fKvLmdGkew74yCA3" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:7RbtNg2yW6arP5Qa" -j ACCEPT
-A cali-INPUT -m comment --comment "cali:QzyAOM2XluZXDN_T" -j MARK --set-xmark 0x0/0x1b0000
-A cali-INPUT -m comment --comment "cali:GFz27hubIVwZCpKd" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:EJcEONEoHt_kINic" -m comment --comment "Host endpoint policy accepted packet." -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -p udp -m comment --comment "cali:-QZG79DohFjalQBb" -m comment --comment "Allow IPv4 VXLAN packets to other allowed hosts" -m multiport --dports 4789 -m addrtype --src-type LOCAL -m set --match-set cali40all-vxlan-net dst -j ACCEPT
-A cali-OUTPUT -p udp -m comment --comment "cali:khjHanYLA9FsU74U" -m comment --comment "Allow outgoing IPv4 Wireguard packets" -m multiport --dports 51820 -m addrtype --src-type LOCAL -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:mRZ-hd2MmgtSHKg6" -j MARK --set-xmark 0x0/0x1b0000
-A cali-OUTPUT -m comment --comment "cali:mxKHFoVDKdQiJSl4" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:cCGZGYQ7tde5aEgj" -m comment --comment "Host endpoint policy accepted packet." -j ACCEPT
-A cali-from-wl-dispatch -i cali4+ -m comment --comment "cali:2b7OEVWxujqPNMC9" -g cali-from-wl-dispatch-4
-A cali-from-wl-dispatch -i cali6+ -m comment --comment "cali:q4h0CAC7qY7qnwj_" -g cali-from-wl-dispatch-6
-A cali-from-wl-dispatch -i calicff72b3391d -m comment --comment "cali:fe6kW6CIpTeH9MXI" -g cali-fw-calicff72b3391d
-A cali-from-wl-dispatch -m comment --comment "cali:lJwS4wLN-Y7yKQKD" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch-4 -i cali40a2bb3ea25 -m comment --comment "cali:HmzXsi8dbvs7-_k0" -g cali-fw-cali40a2bb3ea25
-A cali-from-wl-dispatch-4 -i cali436ce3cef50 -m comment --comment "cali:v_AfY3az7Hy7rBCB" -g cali-fw-cali436ce3cef50
-A cali-from-wl-dispatch-4 -i cali4611030f6e0 -m comment --comment "cali:GwiiXEbZtOQMFNvE" -g cali-fw-cali4611030f6e0
-A cali-from-wl-dispatch-4 -i cali4e366eba6b4 -m comment --comment "cali:3uEqqaI3taRNov_0" -g cali-fw-cali4e366eba6b4
-A cali-from-wl-dispatch-4 -m comment --comment "cali:mq1w96cXj_pqP5s-" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch-6 -i cali622a93eb23b -m comment --comment "cali:JE3N0cUMwJ1z6_Ba" -g cali-fw-cali622a93eb23b
-A cali-from-wl-dispatch-6 -i cali6c12df98eb6 -m comment --comment "cali:33Mj8s0CqnDrR4_V" -g cali-fw-cali6c12df98eb6
-A cali-from-wl-dispatch-6 -m comment --comment "cali:qoOwiShCikvNxEZY" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:49AVxue-iGzyCPcP" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:JBKqMewbzH9E-uxX" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:LgL1mEOJy1g0-8tJ" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali40a2bb3ea25 -p udp -m comment --comment "cali:ju1SjKqoJHQdH12Q" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali40a2bb3ea25 -p ipencap -m comment --comment "cali:t73N9zPhZYRtMyhi" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:h63RNt061T_KY5qV" -j cali-pro-kns.cattle-system
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:ECaIp9oWKHOexNQr" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:ZfEF6649PM79J-az" -j cali-pro-_XnQ5h_hZf854SLqzqE
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:QowfVbQXhiMNFfz_" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali40a2bb3ea25 -m comment --comment "cali:OBScLaCApTKkgcOY" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:bvTti1OEUXLexi5V" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:oFX43QJui8GsP3TQ" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:SaFCz-t6zivYeTud" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali436ce3cef50 -p udp -m comment --comment "cali:iIXcksWJ4Zg1RCjc" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali436ce3cef50 -p ipencap -m comment --comment "cali:IwOQhWAbQ8MCIBny" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:xV-5qGx3m6WDCT4S" -j cali-pro-kns.cattle-system
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:tTDZ8cH7w0HKWoLV" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:xEfrKcKtFugQZHNY" -j cali-pro-_XnQ5h_hZf854SLqzqE
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:HEYuAQ7BncroE9JP" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali436ce3cef50 -m comment --comment "cali:AUprUB7sS-HvuPAP" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:_xGDnhyAjZ08a3K2" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:RJWTRAbdNtsksrWO" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:3YIBqCIT4XdoA9xt" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali4611030f6e0 -p udp -m comment --comment "cali:jFCR2L93FyYfphr0" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali4611030f6e0 -p ipencap -m comment --comment "cali:LeUIxYByQsi8HYHF" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:xJ_89zNxGkOHKEu2" -j cali-pro-kns.calico-system
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:FhbhtKJPajq1fHKC" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:iWBjSzxJR5PZ5gTx" -j cali-pro-_nzzjLvInId1gPHmQz_
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:hFNugNPr268-PrmE" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali4611030f6e0 -m comment --comment "cali:kcaKi8w_fsoOcuGl" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:BGcBk0kV-zK7cyHO" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:GAjsp1sap-VGr9J8" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:IfxuvBVmSChr5zXC" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali4e366eba6b4 -p udp -m comment --comment "cali:u5ntoRxpZSZb3SKE" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali4e366eba6b4 -p ipencap -m comment --comment "cali:fLyv5fMReN1PGOBo" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:4nEcNYkR8Hr6C4vE" -m comment --comment "Start of tier default" -j MARK --set-xmark 0x0/0x20000
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:rRJLAjB9rFVQYHd0" -j cali-po-_8rTIryhbLDXLydt7Zyq
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:300eeJo6OpfLRCAP" -m comment --comment "Return if policy accepted" -j RETURN
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:EO3Dht9IW1xr2Vga" -m comment --comment "End of tier default. Drop if no policies passed packet" -j DROP
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:7kOb2rgAzVg692VW" -j cali-pro-kns.kube-system
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:tUM9FpGdR9hczpU9" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:dYHENcVTXHGwBvqx" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:bwJvtDFYP_6nFvfa" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali4e366eba6b4 -m comment --comment "cali:jXqS_HGIWOO2D7g9" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali622a93eb23b -m comment --comment "cali:lujJbUAqUqvEpIiV" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali622a93eb23b -m comment --comment "cali:JBEUbYAR8eHxiT74" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali622a93eb23b -m comment --comment "cali:bvUufaxJBdg3SOEL" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali622a93eb23b -p udp -m comment --comment "cali:Fr7Zs5B_R6lJkdIp" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali622a93eb23b -p ipencap -m comment --comment "cali:SL5iW3-t36ZM7NMu" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali622a93eb23b -m comment --comment "cali:ktqB0-369oFS15ju" -j cali-pro-kns.kube-system
-A cali-fw-cali622a93eb23b -m comment --comment "cali:LnZ0pYZnDm21T7az" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali622a93eb23b -m comment --comment "cali:9of1bAuvd7d5cf8X" -j cali-pro-_7bnNHSm00P51QAo5Qe
-A cali-fw-cali622a93eb23b -m comment --comment "cali:ekC7MPkyBCE1M3PE" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali622a93eb23b -m comment --comment "cali:FX7D9DG0F1Nhe8_E" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:P-WwEUOodE2lVdCt" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:EdT6y1m5ikOTO7_n" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:B4zTLZs36irKpn7X" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-cali6c12df98eb6 -p udp -m comment --comment "cali:o17LMT7zjJ5l8GkO" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali6c12df98eb6 -p ipencap -m comment --comment "cali:XvBHI7s1p5zL23Q_" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:9hod08g3VzPgI4Di" -j cali-pro-kns.cattle-system
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:c1zS-g5CrrR1bWEM" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:C9KPm7oCyygH6CZ5" -j cali-pro-_deDmtCOemYXSj_UG1n
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:HNHYjTstkdWT_nfX" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-cali6c12df98eb6 -m comment --comment "cali:oQgK6mMi4yzZMLvg" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calicff72b3391d -m comment --comment "cali:MUmhM7gKw8JGph97" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calicff72b3391d -m comment --comment "cali:OmwNSgG4fvmSihpl" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calicff72b3391d -m comment --comment "cali:DRjTWBPR5tJ2ufT-" -j MARK --set-xmark 0x0/0x30000
-A cali-fw-calicff72b3391d -p udp -m comment --comment "cali:z4qBxIVy_EaNkJNv" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calicff72b3391d -p ipencap -m comment --comment "cali:EG6e7Y6zCmD2wlv7" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calicff72b3391d -m comment --comment "cali:SNFEnogXB4QMBPcN" -j cali-pro-kns.cattle-system
-A cali-fw-calicff72b3391d -m comment --comment "cali:_5xvEMN59Nhsccp-" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-calicff72b3391d -m comment --comment "cali:G14OehJIgtV414LE" -j cali-pro-_Jt5JQO28LboxWwRucA
-A cali-fw-calicff72b3391d -m comment --comment "cali:EVuncE9bewdWNaVS" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-fw-calicff72b3391d -m comment --comment "cali:Tw3nZBWpBsk9F3Xk" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pi-_8rTIryhbLDXLydt7Zyq -m comment --comment "cali:hP5NBXVVUlU_xSag" -m comment --comment "Policy kube-system/knp.default.rancher-monitoring-coredns-allow-all ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-po-_8rTIryhbLDXLydt7Zyq -m comment --comment "cali:fZX3ESF9i8TrkF32" -m comment --comment "Policy kube-system/knp.default.rancher-monitoring-coredns-allow-all egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-_7bnNHSm00P51QAo5Qe -m comment --comment "cali:ksjFpC8Po46siiFK" -m comment --comment "Profile ksa.kube-system.rke2-coredns-rke2-coredns-autoscaler ingress" 
-A cali-pri-_Jt5JQO28LboxWwRucA -m comment --comment "cali:d26n6naDlXyVb-kP" -m comment --comment "Profile ksa.cattle-system.rancher-webhook ingress" 
-A cali-pri-_XnQ5h_hZf854SLqzqE -m comment --comment "cali:givjwnuhCqJ4e5_N" -m comment --comment "Profile ksa.cattle-system.cattle ingress" 
-A cali-pri-_deDmtCOemYXSj_UG1n -m comment --comment "cali:tHZuspAwWjgTad48" -m comment --comment "Profile ksa.cattle-system.system-upgrade-controller ingress" 
-A cali-pri-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:UQoEf2WCdU0bPTCb" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers ingress" 
-A cali-pri-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:WqgznqAQ-uYV0oBx" -m comment --comment "Profile ksa.kube-system.coredns ingress" 
-A cali-pri-kns.calico-system -m comment --comment "cali:hLANj-OVIyT53h_j" -m comment --comment "Profile kns.calico-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.cattle-system -m comment --comment "cali:4cxptRUh_i7dOJYS" -m comment --comment "Profile kns.cattle-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_7bnNHSm00P51QAo5Qe -m comment --comment "cali:Cn_XvK0BiITKuv_k" -m comment --comment "Profile ksa.kube-system.rke2-coredns-rke2-coredns-autoscaler egress" 
-A cali-pro-_Jt5JQO28LboxWwRucA -m comment --comment "cali:KaVOh_Za60EoX9xk" -m comment --comment "Profile ksa.cattle-system.rancher-webhook egress" 
-A cali-pro-_XnQ5h_hZf854SLqzqE -m comment --comment "cali:SdFoKv0bBkcv1V09" -m comment --comment "Profile ksa.cattle-system.cattle egress" 
-A cali-pro-_deDmtCOemYXSj_UG1n -m comment --comment "cali:_xGikoWQgMM-8NmD" -m comment --comment "Profile ksa.cattle-system.system-upgrade-controller egress" 
-A cali-pro-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:5bHxBXLMkJKgC6dk" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers egress" 
-A cali-pro-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:0-_UPh39dt5XfhmJ" -m comment --comment "Profile ksa.kube-system.coredns egress" 
-A cali-pro-kns.calico-system -m comment --comment "cali:gWxJzCZXxl31NR0P" -m comment --comment "Profile kns.calico-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.cattle-system -m comment --comment "cali:KTqm7vO7t18yVt6i" -m comment --comment "Profile kns.cattle-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-to-wl-dispatch -o cali4+ -m comment --comment "cali:OvZFoUJ0shat6y2L" -g cali-to-wl-dispatch-4
-A cali-to-wl-dispatch -o cali6+ -m comment --comment "cali:E143VefkmHaJeZNh" -g cali-to-wl-dispatch-6
-A cali-to-wl-dispatch -o calicff72b3391d -m comment --comment "cali:wncOojO4REpW8C_t" -g cali-tw-calicff72b3391d
-A cali-to-wl-dispatch -m comment --comment "cali:ZBfw9nVcuDSC5zvZ" -m comment --comment "Unknown interface" -j DROP
-A cali-to-wl-dispatch-4 -o cali40a2bb3ea25 -m comment --comment "cali:Iya42XeVBu-ehbIT" -g cali-tw-cali40a2bb3ea25
-A cali-to-wl-dispatch-4 -o cali436ce3cef50 -m comment --comment "cali:rSwcRi7viYlgC0Tj" -g cali-tw-cali436ce3cef50
-A cali-to-wl-dispatch-4 -o cali4611030f6e0 -m comment --comment "cali:xqqY6p55ZCJ1POoh" -g cali-tw-cali4611030f6e0
-A cali-to-wl-dispatch-4 -o cali4e366eba6b4 -m comment --comment "cali:n5cgXjBrdfw5Egln" -g cali-tw-cali4e366eba6b4
-A cali-to-wl-dispatch-4 -m comment --comment "cali:J0GeHiL129Ct_0rx" -m comment --comment "Unknown interface" -j DROP
-A cali-to-wl-dispatch-6 -o cali622a93eb23b -m comment --comment "cali:d8yv0FHkacJzOjha" -g cali-tw-cali622a93eb23b
-A cali-to-wl-dispatch-6 -o cali6c12df98eb6 -m comment --comment "cali:RRnq8G61Lm2MQnn7" -g cali-tw-cali6c12df98eb6
-A cali-to-wl-dispatch-6 -m comment --comment "cali:peiLewukvFrmr3wW" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:Q3x--ASb709u5HtQ" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:ZUxEJnkahPplv0MS" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:AgKKkI2Aa-yxuFUe" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:bAcC9jp5s0ISv-QP" -j cali-pri-kns.cattle-system
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:s5wiiWdKC-VBRdn1" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:bYq-ybBh6tNmkdsy" -j cali-pri-_XnQ5h_hZf854SLqzqE
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:A4yulyOge6XWnXfn" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali40a2bb3ea25 -m comment --comment "cali:CL4hbY4oG7FBxfCJ" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:DMwIMMIuWEXeDzhy" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:nZOtDcWM7L6jhQdO" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:COK02m0tKPZr3_Dq" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:GQWS4uJbcClnwC9_" -j cali-pri-kns.cattle-system
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:PyLv3ZOCUP2j8M6W" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:Ok4TwhoX1B1AnweW" -j cali-pri-_XnQ5h_hZf854SLqzqE
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:xcOojU52x57QzEuF" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali436ce3cef50 -m comment --comment "cali:UVQtRhCX6Lm0-bhx" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:Z4TgyT09vg7DvsAY" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:b8CtqsMpDpWjPXcT" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:gt9D9bBcWXDYTu-y" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:y5DS3wDGvTQ_mxP5" -j cali-pri-kns.calico-system
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:psRyuv9lfUXPQRzk" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:-NU7cACbN3fH7zjb" -j cali-pri-_nzzjLvInId1gPHmQz_
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:PsZKUqqPDA6jgNLe" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali4611030f6e0 -m comment --comment "cali:UvpOBO-tm2PVIMbh" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:FfGGf80mwEVuaXsX" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:m3VZWtI1XWI4uvoi" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:y9hbvNKQAdOwcvb6" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:9KSq8mMX5eMMdXMa" -m comment --comment "Start of tier default" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:JernVF5miL_IXiF1" -j cali-pi-_8rTIryhbLDXLydt7Zyq
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:_chZvZBAWlFJ4zcK" -m comment --comment "Return if policy accepted" -j RETURN
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:qp-aWNm00oXPOM6w" -m comment --comment "End of tier default. Drop if no policies passed packet" -j DROP
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:3pdiKJyeyqx4yd-o" -j cali-pri-kns.kube-system
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:tyMG5vCMiu6G2L0f" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:z4Vapru0D8JEQyvH" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:m64eMF8dO3c0ict4" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali4e366eba6b4 -m comment --comment "cali:zhPU1jtCiQKpP83i" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali622a93eb23b -m comment --comment "cali:v4uBxBD3AqU6A95_" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali622a93eb23b -m comment --comment "cali:ylqPS3b21U7bhPMi" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali622a93eb23b -m comment --comment "cali:j4Cli50Cg_8qwTi2" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali622a93eb23b -m comment --comment "cali:mP-F_ssBpPFUGQny" -j cali-pri-kns.kube-system
-A cali-tw-cali622a93eb23b -m comment --comment "cali:sdj09HQHZru4qffe" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali622a93eb23b -m comment --comment "cali:2hY3SPdq7s1YmcW4" -j cali-pri-_7bnNHSm00P51QAo5Qe
-A cali-tw-cali622a93eb23b -m comment --comment "cali:1R3wBxFA7a_8e_wW" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali622a93eb23b -m comment --comment "cali:eJQ53N_dAheHcZzm" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:H4R3_Gi6DD7mXEEO" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:P9n-YhdmpnaVlyDf" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:GgjpNPLO2j6RZssb" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:tlK9tKWYt5lipGJy" -j cali-pri-kns.cattle-system
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:yWtCvFnVdOxfimGE" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:8NPTmxA9tZ0_zEXW" -j cali-pri-_deDmtCOemYXSj_UG1n
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:MuLhnjOKRbM2espx" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-cali6c12df98eb6 -m comment --comment "cali:lKiVQcv9ZBahKmbF" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calicff72b3391d -m comment --comment "cali:6JL1jVoYW_UPzk92" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calicff72b3391d -m comment --comment "cali:RXz9C1dpkVxuVEnA" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calicff72b3391d -m comment --comment "cali:ah1qdozn5TVNpC7m" -j MARK --set-xmark 0x0/0x30000
-A cali-tw-calicff72b3391d -m comment --comment "cali:jHvhrWP_i78gNIzz" -j cali-pri-kns.cattle-system
-A cali-tw-calicff72b3391d -m comment --comment "cali:NOMxsK8q9eGSRjny" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-calicff72b3391d -m comment --comment "cali:cv3ZbW0gHVGL3sKn" -j cali-pri-_Jt5JQO28LboxWwRucA
-A cali-tw-calicff72b3391d -m comment --comment "cali:lToI466IwDy7JT5A" -m comment --comment "Return if profile accepted" -j RETURN
-A cali-tw-calicff72b3391d -m comment --comment "cali:rJqwH028W9-BgO8e" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Wed Jan  7 23:34:21 2026
# Generated by iptables-save v1.8.7 on Wed Jan  7 23:34:21 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-EXT-UDVXCUUPV3TWYDKW - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2B5XIXG64J2XIYPW - [0:0]
:KUBE-SEP-2BW3IWP2DAO5VI5C - [0:0]
:KUBE-SEP-2THVF4XV5EU3ZPXS - [0:0]
:KUBE-SEP-3EJXMAENS6PA5TNJ - [0:0]
:KUBE-SEP-3MTJL6YLVVP4DUO5 - [0:0]
:KUBE-SEP-3SHTPU44VOUWKIZX - [0:0]
:KUBE-SEP-4FAGCKTPFUKXVWAR - [0:0]
:KUBE-SEP-6LG3EDEMRQHDULPO - [0:0]
:KUBE-SEP-6YLB6OMTAAGHUWQ2 - [0:0]
:KUBE-SEP-7MTBWO5YGAMMKMAO - [0:0]
:KUBE-SEP-A2J7EKAZNUIJPVKB - [0:0]
:KUBE-SEP-AKR6CEWRPI4Z3MFP - [0:0]
:KUBE-SEP-AZDPU6ZRXZOAKMMT - [0:0]
:KUBE-SEP-BMQM5RYMOV3K655N - [0:0]
:KUBE-SEP-C2F2NJYQA2OGQMLC - [0:0]
:KUBE-SEP-CETKDPRB4XVEPXEF - [0:0]
:KUBE-SEP-CMLJ3UCZ2EWO6T2V - [0:0]
:KUBE-SEP-CRKV7RYZO4CA6CZQ - [0:0]
:KUBE-SEP-CXEJNOA3ZBPRSCR5 - [0:0]
:KUBE-SEP-DVNXVWGBLBR54RNF - [0:0]
:KUBE-SEP-DZT2I4ZDY7XPOYL6 - [0:0]
:KUBE-SEP-ERQO2O27TXDWHZNK - [0:0]
:KUBE-SEP-EUDFX5WWRVX5TEST - [0:0]
:KUBE-SEP-EVSNOTTPINK5I7GP - [0:0]
:KUBE-SEP-FB7LJIDRQHUZHIGE - [0:0]
:KUBE-SEP-FBONYXDCZYUS66OX - [0:0]
:KUBE-SEP-FKKKRNWJV3IF47YW - [0:0]
:KUBE-SEP-FV26N6VYHXVXEHIW - [0:0]
:KUBE-SEP-HDHKH3WYYOHIW2LM - [0:0]
:KUBE-SEP-HRQZN5HMG7OT3UJ4 - [0:0]
:KUBE-SEP-JAGIKREDCOPPMHL4 - [0:0]
:KUBE-SEP-JDJYFOIQOEVL27VE - [0:0]
:KUBE-SEP-JH4AWE3MBLQPK244 - [0:0]
:KUBE-SEP-JQXXHRHTRP43NH2Z - [0:0]
:KUBE-SEP-JYDKPX6DVENULHXV - [0:0]
:KUBE-SEP-KKHMTFN2S4CGAO72 - [0:0]
:KUBE-SEP-LASVFMRDUWSGYCGQ - [0:0]
:KUBE-SEP-LGTKZ2DSVFSMWCDQ - [0:0]
:KUBE-SEP-LKLYRKOCFPASG5FO - [0:0]
:KUBE-SEP-MR4SNJP7N4I5MJC5 - [0:0]
:KUBE-SEP-MZEZYTNEESMXTZ2Q - [0:0]
:KUBE-SEP-NCRQ3ZFXVKBDYXJ2 - [0:0]
:KUBE-SEP-OGFQMBDAC6TKQTCJ - [0:0]
:KUBE-SEP-PWGRZXJTFHT3DEJJ - [0:0]
:KUBE-SEP-RTC2BWWTMSYH5ACW - [0:0]
:KUBE-SEP-SU4RI2JQCGIKYJU7 - [0:0]
:KUBE-SEP-T5GDSH5UDNVSBBBD - [0:0]
:KUBE-SEP-TDJETFWVGGPWXXGZ - [0:0]
:KUBE-SEP-TVCCKNYZOQVB2YRX - [0:0]
:KUBE-SEP-U75AFFWW4NVNO5AO - [0:0]
:KUBE-SEP-UKHW5QX6XGBTFQM4 - [0:0]
:KUBE-SEP-UVS77VWFGEGINJWJ - [0:0]
:KUBE-SEP-VWMAUWN2G3PKN7SD - [0:0]
:KUBE-SEP-W2INZDPAMSHMJ6BH - [0:0]
:KUBE-SEP-WLNEGUPYXN364HXH - [0:0]
:KUBE-SEP-XVATE2C77IUSW7SZ - [0:0]
:KUBE-SEP-Y7CKTLQYNBT2IHXQ - [0:0]
:KUBE-SEP-Z62NRHH5E3IPFBI7 - [0:0]
:KUBE-SEP-ZHT3WDXRH2LELU6J - [0:0]
:KUBE-SEP-ZWH452QYBB22FZMS - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-2ABN56CTNX325LLI - [0:0]
:KUBE-SVC-46CB5Z6CZH2WFWVP - [0:0]
:KUBE-SVC-4WFNQVGMHXINT2VO - [0:0]
:KUBE-SVC-6EEFEXJOUC5HRC2U - [0:0]
:KUBE-SVC-6MECGK62JNIKDRLL - [0:0]
:KUBE-SVC-BOJCKSINR77JVVPB - [0:0]
:KUBE-SVC-BSZMNEG7M6JICBTH - [0:0]
:KUBE-SVC-D72WHH2PHGEL4SRX - [0:0]
:KUBE-SVC-DAM77X32V24O2EL5 - [0:0]
:KUBE-SVC-DISNXZXWEI7GIGLU - [0:0]
:KUBE-SVC-ELE3EOWUPGZLKWXO - [0:0]
:KUBE-SVC-EW6UA3DC2CVRQ4ND - [0:0]
:KUBE-SVC-EZW4DS5HT4GROINA - [0:0]
:KUBE-SVC-F3PZ5PNOTTIABLQ5 - [0:0]
:KUBE-SVC-HP77IKALGGR6UULO - [0:0]
:KUBE-SVC-JAGPXAZKZK76XVSE - [0:0]
:KUBE-SVC-JCCTHMVVOJD7CTXD - [0:0]
:KUBE-SVC-JQ5LIQLHTIZNWLOX - [0:0]
:KUBE-SVC-NGSMBSSFRDULITT4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-NQL64TY2T3FWFXFQ - [0:0]
:KUBE-SVC-OEKFV6TG6AAIHGRX - [0:0]
:KUBE-SVC-PUNXDRXNIM3ELMDM - [0:0]
:KUBE-SVC-R2YIKPX5C2B4PRH7 - [0:0]
:KUBE-SVC-REY7A7JAMMNC25ZM - [0:0]
:KUBE-SVC-RK657RLKDNVNU64O - [0:0]
:KUBE-SVC-RXZQBFX6IWO22WWW - [0:0]
:KUBE-SVC-S4EMHPZ44GDBMEWI - [0:0]
:KUBE-SVC-SX5Y67UR33APG6CK - [0:0]
:KUBE-SVC-TYVUZ72JN6SHFAXC - [0:0]
:KUBE-SVC-UDVXCUUPV3TWYDKW - [0:0]
:KUBE-SVC-V6M6RRQXTSHVF7LK - [0:0]
:KUBE-SVC-VDF2XRPMF7GCOKCC - [0:0]
:KUBE-SVC-WSX3IQ6WDZKL2S34 - [0:0]
:KUBE-SVC-YFPH5LFNKP7E3G4L - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m comment --comment "cali:0i8pjzKKPyA34aQD" -j cali-POSTROUTING
-A KUBE-EXT-UDVXCUUPV3TWYDKW -m comment --comment "masquerade traffic for demo-backend/backend-svc external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-UDVXCUUPV3TWYDKW -j KUBE-SVC-UDVXCUUPV3TWYDKW
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "demo-backend/backend-svc" -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-UDVXCUUPV3TWYDKW
-A KUBE-NODEPORTS -p tcp -m comment --comment "demo-backend/backend-svc" -j KUBE-EXT-UDVXCUUPV3TWYDKW
-A KUBE-POSTROUTING -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-2B5XIXG64J2XIYPW -s 10.42.236.217/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-grafana:nginx-http" -j KUBE-MARK-MASQ
-A KUBE-SEP-2B5XIXG64J2XIYPW -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-grafana:nginx-http" -m tcp -j DNAT --to-destination 10.42.236.217:8080
-A KUBE-SEP-2BW3IWP2DAO5VI5C -s 10.42.207.10/32 -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -j KUBE-MARK-MASQ
-A KUBE-SEP-2BW3IWP2DAO5VI5C -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -m tcp -j DNAT --to-destination 10.42.207.10:444
-A KUBE-SEP-2THVF4XV5EU3ZPXS -s 10.42.207.12/32 -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -j KUBE-MARK-MASQ
-A KUBE-SEP-2THVF4XV5EU3ZPXS -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal" -m tcp -j DNAT --to-destination 10.42.207.12:444
-A KUBE-SEP-3EJXMAENS6PA5TNJ -s 10.42.236.197/32 -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-3EJXMAENS6PA5TNJ -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -m tcp -j DNAT --to-destination 10.42.236.197:8443
-A KUBE-SEP-3MTJL6YLVVP4DUO5 -s 10.42.60.74/32 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-3MTJL6YLVVP4DUO5 -p tcp -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -m tcp -j DNAT --to-destination 10.42.60.74:9501
-A KUBE-SEP-3SHTPU44VOUWKIZX -s 10.42.60.84/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy" -j KUBE-MARK-MASQ
-A KUBE-SEP-3SHTPU44VOUWKIZX -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy" -m tcp -j DNAT --to-destination 10.42.60.84:8080
-A KUBE-SEP-4FAGCKTPFUKXVWAR -s 10.42.236.194/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-4FAGCKTPFUKXVWAR -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -m udp -j DNAT --to-destination 10.42.236.194:53
-A KUBE-SEP-6LG3EDEMRQHDULPO -s 10.42.207.10/32 -m comment --comment "cattle-system/cattle-cluster-agent:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-6LG3EDEMRQHDULPO -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http" -m tcp -j DNAT --to-destination 10.42.207.10:80
-A KUBE-SEP-6YLB6OMTAAGHUWQ2 -s 10.42.60.70/32 -m comment --comment "demo-frontend/frontend-svc" -j KUBE-MARK-MASQ
-A KUBE-SEP-6YLB6OMTAAGHUWQ2 -p tcp -m comment --comment "demo-frontend/frontend-svc" -m tcp -j DNAT --to-destination 10.42.60.70:80
-A KUBE-SEP-7MTBWO5YGAMMKMAO -s 10.42.20.95/32 -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-7MTBWO5YGAMMKMAO -p tcp -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -m tcp -j DNAT --to-destination 10.42.20.95:9502
-A KUBE-SEP-A2J7EKAZNUIJPVKB -s 10.42.60.87/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:http-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-A2J7EKAZNUIJPVKB -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:http-web" -m tcp -j DNAT --to-destination 10.42.60.87:8081
-A KUBE-SEP-AKR6CEWRPI4Z3MFP -s 10.42.20.98/32 -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-AKR6CEWRPI4Z3MFP -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -m tcp -j DNAT --to-destination 10.42.20.98:8443
-A KUBE-SEP-AZDPU6ZRXZOAKMMT -s 10.42.20.98/32 -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-AZDPU6ZRXZOAKMMT -p tcp -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics" -m tcp -j DNAT --to-destination 10.42.20.98:10254
-A KUBE-SEP-BMQM5RYMOV3K655N -s 10.42.207.3/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-BMQM5RYMOV3K655N -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -m tcp -j DNAT --to-destination 10.42.207.3:53
-A KUBE-SEP-C2F2NJYQA2OGQMLC -s 10.42.60.86/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-C2F2NJYQA2OGQMLC -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http" -m tcp -j DNAT --to-destination 10.42.60.86:8080
-A KUBE-SEP-CETKDPRB4XVEPXEF -s 134.199.165.191/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-CETKDPRB4XVEPXEF -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 134.199.165.191:6443
-A KUBE-SEP-CMLJ3UCZ2EWO6T2V -s 10.42.236.204/32 -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -j KUBE-MARK-MASQ
-A KUBE-SEP-CMLJ3UCZ2EWO6T2V -p tcp -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -m tcp -j DNAT --to-destination 10.42.236.204:9503
-A KUBE-SEP-CRKV7RYZO4CA6CZQ -s 10.42.236.212/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:http-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-CRKV7RYZO4CA6CZQ -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:http-web" -m tcp -j DNAT --to-destination 10.42.236.212:9093
-A KUBE-SEP-CXEJNOA3ZBPRSCR5 -s 134.199.144.255/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-CXEJNOA3ZBPRSCR5 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -m tcp -j DNAT --to-destination 134.199.144.255:10249
-A KUBE-SEP-DVNXVWGBLBR54RNF -s 10.42.60.88/32 -m comment --comment "longhorn-system/longhorn-frontend:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-DVNXVWGBLBR54RNF -p tcp -m comment --comment "longhorn-system/longhorn-frontend:http" -m tcp -j DNAT --to-destination 10.42.60.88:8000
-A KUBE-SEP-DZT2I4ZDY7XPOYL6 -s 10.42.236.195/32 -m comment --comment "kube-system/rke2-metrics-server:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-DZT2I4ZDY7XPOYL6 -p tcp -m comment --comment "kube-system/rke2-metrics-server:https" -m tcp -j DNAT --to-destination 10.42.236.195:10250
-A KUBE-SEP-ERQO2O27TXDWHZNK -s 10.42.236.203/32 -m comment --comment "longhorn-system/longhorn-frontend:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-ERQO2O27TXDWHZNK -p tcp -m comment --comment "longhorn-system/longhorn-frontend:http" -m tcp -j DNAT --to-destination 10.42.236.203:8000
-A KUBE-SEP-EUDFX5WWRVX5TEST -s 134.199.165.191/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-EUDFX5WWRVX5TEST -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 134.199.165.191:5473
-A KUBE-SEP-EVSNOTTPINK5I7GP -s 10.42.60.67/32 -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-EVSNOTTPINK5I7GP -p tcp -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics" -m tcp -j DNAT --to-destination 10.42.60.67:10254
-A KUBE-SEP-FB7LJIDRQHUZHIGE -s 10.42.236.219/32 -m comment --comment "demo-backend/backend-svc" -j KUBE-MARK-MASQ
-A KUBE-SEP-FB7LJIDRQHUZHIGE -p tcp -m comment --comment "demo-backend/backend-svc" -m tcp -j DNAT --to-destination 10.42.236.219:8080
-A KUBE-SEP-FBONYXDCZYUS66OX -s 10.42.60.83/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-operator:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-FBONYXDCZYUS66OX -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-operator:https" -m tcp -j DNAT --to-destination 10.42.60.83:10250
-A KUBE-SEP-FKKKRNWJV3IF47YW -s 209.38.91.232/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-FKKKRNWJV3IF47YW -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -m tcp -j DNAT --to-destination 209.38.91.232:10249
-A KUBE-SEP-FV26N6VYHXVXEHIW -s 10.42.236.194/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-FV26N6VYHXVXEHIW -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53" -m tcp -j DNAT --to-destination 10.42.236.194:53
-A KUBE-SEP-HDHKH3WYYOHIW2LM -s 134.199.165.191/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-HDHKH3WYYOHIW2LM -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -m tcp -j DNAT --to-destination 134.199.165.191:9796
-A KUBE-SEP-HRQZN5HMG7OT3UJ4 -s 10.42.60.85/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy" -j KUBE-MARK-MASQ
-A KUBE-SEP-HRQZN5HMG7OT3UJ4 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy" -m tcp -j DNAT --to-destination 10.42.60.85:8080
-A KUBE-SEP-JAGIKREDCOPPMHL4 -s 10.42.20.95/32 -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -j KUBE-MARK-MASQ
-A KUBE-SEP-JAGIKREDCOPPMHL4 -p tcp -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -m tcp -j DNAT --to-destination 10.42.20.95:9503
-A KUBE-SEP-JDJYFOIQOEVL27VE -s 10.42.20.95/32 -m comment --comment "longhorn-system/longhorn-backend:manager" -j KUBE-MARK-MASQ
-A KUBE-SEP-JDJYFOIQOEVL27VE -p tcp -m comment --comment "longhorn-system/longhorn-backend:manager" -m tcp -j DNAT --to-destination 10.42.20.95:9500
-A KUBE-SEP-JH4AWE3MBLQPK244 -s 134.199.165.191/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-JH4AWE3MBLQPK244 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-client:metrics" -m tcp -j DNAT --to-destination 134.199.165.191:10259
-A KUBE-SEP-JQXXHRHTRP43NH2Z -s 134.199.165.191/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-JQXXHRHTRP43NH2Z -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics" -m tcp -j DNAT --to-destination 134.199.165.191:10257
-A KUBE-SEP-JYDKPX6DVENULHXV -s 170.64.187.24/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-JYDKPX6DVENULHXV -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -m tcp -j DNAT --to-destination 170.64.187.24:10249
-A KUBE-SEP-KKHMTFN2S4CGAO72 -s 10.42.236.222/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy" -j KUBE-MARK-MASQ
-A KUBE-SEP-KKHMTFN2S4CGAO72 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy" -m tcp -j DNAT --to-destination 10.42.236.222:8080
-A KUBE-SEP-LASVFMRDUWSGYCGQ -s 10.42.207.13/32 -m comment --comment "cattle-system/rancher-webhook:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-LASVFMRDUWSGYCGQ -p tcp -m comment --comment "cattle-system/rancher-webhook:https" -m tcp -j DNAT --to-destination 10.42.207.13:9443
-A KUBE-SEP-LGTKZ2DSVFSMWCDQ -s 170.64.187.24/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-LGTKZ2DSVFSMWCDQ -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -m tcp -j DNAT --to-destination 170.64.187.24:9796
-A KUBE-SEP-LKLYRKOCFPASG5FO -s 209.38.91.232/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-LKLYRKOCFPASG5FO -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -m tcp -j DNAT --to-destination 209.38.91.232:9796
-A KUBE-SEP-MR4SNJP7N4I5MJC5 -s 10.42.236.200/32 -m comment --comment "demo-frontend/frontend-svc" -j KUBE-MARK-MASQ
-A KUBE-SEP-MR4SNJP7N4I5MJC5 -p tcp -m comment --comment "demo-frontend/frontend-svc" -m tcp -j DNAT --to-destination 10.42.236.200:80
-A KUBE-SEP-MZEZYTNEESMXTZ2Q -s 170.64.187.24/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-MZEZYTNEESMXTZ2Q -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 170.64.187.24:5473
-A KUBE-SEP-NCRQ3ZFXVKBDYXJ2 -s 134.199.165.191/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-NCRQ3ZFXVKBDYXJ2 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics" -m tcp -j DNAT --to-destination 134.199.165.191:10249
-A KUBE-SEP-OGFQMBDAC6TKQTCJ -s 10.42.236.204/32 -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-OGFQMBDAC6TKQTCJ -p tcp -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -m tcp -j DNAT --to-destination 10.42.236.204:9502
-A KUBE-SEP-PWGRZXJTFHT3DEJJ -s 134.199.144.255/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-PWGRZXJTFHT3DEJJ -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics" -m tcp -j DNAT --to-destination 134.199.144.255:9796
-A KUBE-SEP-RTC2BWWTMSYH5ACW -s 10.42.236.218/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-RTC2BWWTMSYH5ACW -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https" -m tcp -j DNAT --to-destination 10.42.236.218:6443
-A KUBE-SEP-SU4RI2JQCGIKYJU7 -s 10.42.60.72/32 -m comment --comment "default/basic-web-svc" -j KUBE-MARK-MASQ
-A KUBE-SEP-SU4RI2JQCGIKYJU7 -p tcp -m comment --comment "default/basic-web-svc" -m tcp -j DNAT --to-destination 10.42.60.72:80
-A KUBE-SEP-T5GDSH5UDNVSBBBD -s 134.199.165.191/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-T5GDSH5UDNVSBBBD -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-client:metrics" -m tcp -j DNAT --to-destination 134.199.165.191:2381
-A KUBE-SEP-TDJETFWVGGPWXXGZ -s 10.42.60.67/32 -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-TDJETFWVGGPWXXGZ -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook" -m tcp -j DNAT --to-destination 10.42.60.67:8443
-A KUBE-SEP-TVCCKNYZOQVB2YRX -s 10.42.20.95/32 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-TVCCKNYZOQVB2YRX -p tcp -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -m tcp -j DNAT --to-destination 10.42.20.95:9501
-A KUBE-SEP-U75AFFWW4NVNO5AO -s 10.42.60.74/32 -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -j KUBE-MARK-MASQ
-A KUBE-SEP-U75AFFWW4NVNO5AO -p tcp -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -m tcp -j DNAT --to-destination 10.42.60.74:9503
-A KUBE-SEP-UKHW5QX6XGBTFQM4 -s 10.42.236.223/32 -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy" -j KUBE-MARK-MASQ
-A KUBE-SEP-UKHW5QX6XGBTFQM4 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy" -m tcp -j DNAT --to-destination 10.42.236.223:8080
-A KUBE-SEP-UVS77VWFGEGINJWJ -s 10.42.236.212/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-UVS77VWFGEGINJWJ -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web" -m tcp -j DNAT --to-destination 10.42.236.212:8080
-A KUBE-SEP-VWMAUWN2G3PKN7SD -s 10.42.60.74/32 -m comment --comment "longhorn-system/longhorn-backend:manager" -j KUBE-MARK-MASQ
-A KUBE-SEP-VWMAUWN2G3PKN7SD -p tcp -m comment --comment "longhorn-system/longhorn-backend:manager" -m tcp -j DNAT --to-destination 10.42.60.74:9500
-A KUBE-SEP-W2INZDPAMSHMJ6BH -s 10.42.60.74/32 -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-W2INZDPAMSHMJ6BH -p tcp -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -m tcp -j DNAT --to-destination 10.42.60.74:9502
-A KUBE-SEP-WLNEGUPYXN364HXH -s 10.42.60.87/32 -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-WLNEGUPYXN364HXH -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web" -m tcp -j DNAT --to-destination 10.42.60.87:8080
-A KUBE-SEP-XVATE2C77IUSW7SZ -s 10.42.236.204/32 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-XVATE2C77IUSW7SZ -p tcp -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -m tcp -j DNAT --to-destination 10.42.236.204:9501
-A KUBE-SEP-Y7CKTLQYNBT2IHXQ -s 10.42.207.3/32 -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-Y7CKTLQYNBT2IHXQ -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53" -m udp -j DNAT --to-destination 10.42.207.3:53
-A KUBE-SEP-Z62NRHH5E3IPFBI7 -s 10.42.207.12/32 -m comment --comment "cattle-system/cattle-cluster-agent:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-Z62NRHH5E3IPFBI7 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http" -m tcp -j DNAT --to-destination 10.42.207.12:80
-A KUBE-SEP-ZHT3WDXRH2LELU6J -s 10.42.236.197/32 -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZHT3WDXRH2LELU6J -p tcp -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics" -m tcp -j DNAT --to-destination 10.42.236.197:10254
-A KUBE-SEP-ZWH452QYBB22FZMS -s 10.42.236.204/32 -m comment --comment "longhorn-system/longhorn-backend:manager" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZWH452QYBB22FZMS -p tcp -m comment --comment "longhorn-system/longhorn-backend:manager" -m tcp -j DNAT --to-destination 10.42.236.204:9500
-A KUBE-SERVICES -d 10.43.192.58/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:http-web cluster IP" -j KUBE-SVC-JCCTHMVVOJD7CTXD
-A KUBE-SERVICES -d 10.43.221.21/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-grafana:nginx-http cluster IP" -j KUBE-SVC-6EEFEXJOUC5HRC2U
-A KUBE-SERVICES -d 10.43.75.117/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy cluster IP" -j KUBE-SVC-4WFNQVGMHXINT2VO
-A KUBE-SERVICES -d 10.43.214.63/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics cluster IP" -j KUBE-SVC-OEKFV6TG6AAIHGRX
-A KUBE-SERVICES -d 10.43.51.105/32 -p tcp -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend cluster IP" -j KUBE-SVC-TYVUZ72JN6SHFAXC
-A KUBE-SERVICES -d 10.43.123.164/32 -p tcp -m comment --comment "longhorn-system/longhorn-backend:manager cluster IP" -j KUBE-SVC-NQL64TY2T3FWFXFQ
-A KUBE-SERVICES -d 10.43.113.211/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:http-web cluster IP" -j KUBE-SVC-BSZMNEG7M6JICBTH
-A KUBE-SERVICES -d 10.43.118.208/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http cluster IP" -j KUBE-SVC-2ABN56CTNX325LLI
-A KUBE-SERVICES -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 cluster IP" -j KUBE-SVC-YFPH5LFNKP7E3G4L
-A KUBE-SERVICES -d 10.43.83.142/32 -p tcp -m comment --comment "cattle-system/rancher-webhook:https cluster IP" -j KUBE-SVC-BOJCKSINR77JVVPB
-A KUBE-SERVICES -d 10.43.48.23/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal cluster IP" -j KUBE-SVC-DISNXZXWEI7GIGLU
-A KUBE-SERVICES -d 10.43.10.180/32 -p tcp -m comment --comment "demo-backend/backend-svc cluster IP" -j KUBE-SVC-UDVXCUUPV3TWYDKW
-A KUBE-SERVICES -d 10.43.59.17/32 -p tcp -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook cluster IP" -j KUBE-SVC-NGSMBSSFRDULITT4
-A KUBE-SERVICES -d 10.43.229.143/32 -p tcp -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook cluster IP" -j KUBE-SVC-S4EMHPZ44GDBMEWI
-A KUBE-SERVICES -d 10.43.9.86/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-operator:https cluster IP" -j KUBE-SVC-WSX3IQ6WDZKL2S34
-A KUBE-SERVICES -d 10.43.6.31/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics cluster IP" -j KUBE-SVC-R2YIKPX5C2B4PRH7
-A KUBE-SERVICES -d 10.43.10.204/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-client:metrics cluster IP" -j KUBE-SVC-DAM77X32V24O2EL5
-A KUBE-SERVICES -d 10.43.113.211/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web cluster IP" -j KUBE-SVC-EZW4DS5HT4GROINA
-A KUBE-SERVICES -d 10.43.106.123/32 -p tcp -m comment --comment "demo-frontend/frontend-svc cluster IP" -j KUBE-SVC-6MECGK62JNIKDRLL
-A KUBE-SERVICES -d 10.43.227.236/32 -p tcp -m comment --comment "default/basic-web-svc cluster IP" -j KUBE-SVC-V6M6RRQXTSHVF7LK
-A KUBE-SERVICES -d 10.43.64.89/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics cluster IP" -j KUBE-SVC-JAGPXAZKZK76XVSE
-A KUBE-SERVICES -d 10.43.48.23/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http cluster IP" -j KUBE-SVC-RXZQBFX6IWO22WWW
-A KUBE-SERVICES -d 10.43.198.51/32 -p tcp -m comment --comment "kube-system/rke2-metrics-server:https cluster IP" -j KUBE-SVC-HP77IKALGGR6UULO
-A KUBE-SERVICES -d 10.43.67.110/32 -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook cluster IP" -j KUBE-SVC-46CB5Z6CZH2WFWVP
-A KUBE-SERVICES -d 10.43.19.114/32 -p tcp -m comment --comment "longhorn-system/longhorn-frontend:http cluster IP" -j KUBE-SVC-ELE3EOWUPGZLKWXO
-A KUBE-SERVICES -d 10.43.248.104/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy cluster IP" -j KUBE-SVC-VDF2XRPMF7GCOKCC
-A KUBE-SERVICES -d 10.43.35.174/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy cluster IP" -j KUBE-SVC-JQ5LIQLHTIZNWLOX
-A KUBE-SERVICES -d 10.43.63.193/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-client:metrics cluster IP" -j KUBE-SVC-SX5Y67UR33APG6CK
-A KUBE-SERVICES -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 cluster IP" -j KUBE-SVC-PUNXDRXNIM3ELMDM
-A KUBE-SERVICES -d 10.43.192.58/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web cluster IP" -j KUBE-SVC-D72WHH2PHGEL4SRX
-A KUBE-SERVICES -d 10.43.162.3/32 -p tcp -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics cluster IP" -j KUBE-SVC-F3PZ5PNOTTIABLQ5
-A KUBE-SERVICES -d 10.43.172.21/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https cluster IP" -j KUBE-SVC-REY7A7JAMMNC25ZM
-A KUBE-SERVICES -d 10.43.29.34/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -j KUBE-SVC-RK657RLKDNVNU64O
-A KUBE-SERVICES -d 10.43.26.63/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy cluster IP" -j KUBE-SVC-EW6UA3DC2CVRQ4ND
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-2ABN56CTNX325LLI ! -s 10.42.0.0/16 -d 10.43.118.208/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-2ABN56CTNX325LLI -m comment --comment "cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http -> 10.42.60.86:8080" -j KUBE-SEP-C2F2NJYQA2OGQMLC
-A KUBE-SVC-46CB5Z6CZH2WFWVP ! -s 10.42.0.0/16 -d 10.43.67.110/32 -p tcp -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-46CB5Z6CZH2WFWVP -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.20.98:8443" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-AKR6CEWRPI4Z3MFP
-A KUBE-SVC-46CB5Z6CZH2WFWVP -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.236.197:8443" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-3EJXMAENS6PA5TNJ
-A KUBE-SVC-46CB5Z6CZH2WFWVP -m comment --comment "kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.60.67:8443" -j KUBE-SEP-TDJETFWVGGPWXXGZ
-A KUBE-SVC-4WFNQVGMHXINT2VO ! -s 10.42.0.0/16 -d 10.43.75.117/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-4WFNQVGMHXINT2VO -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy -> 10.42.236.222:8080" -j KUBE-SEP-KKHMTFN2S4CGAO72
-A KUBE-SVC-6EEFEXJOUC5HRC2U ! -s 10.42.0.0/16 -d 10.43.221.21/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-grafana:nginx-http cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-6EEFEXJOUC5HRC2U -m comment --comment "cattle-monitoring-system/rancher-monitoring-grafana:nginx-http -> 10.42.236.217:8080" -j KUBE-SEP-2B5XIXG64J2XIYPW
-A KUBE-SVC-6MECGK62JNIKDRLL ! -s 10.42.0.0/16 -d 10.43.106.123/32 -p tcp -m comment --comment "demo-frontend/frontend-svc cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-6MECGK62JNIKDRLL -m comment --comment "demo-frontend/frontend-svc -> 10.42.236.200:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-MR4SNJP7N4I5MJC5
-A KUBE-SVC-6MECGK62JNIKDRLL -m comment --comment "demo-frontend/frontend-svc -> 10.42.60.70:80" -j KUBE-SEP-6YLB6OMTAAGHUWQ2
-A KUBE-SVC-BOJCKSINR77JVVPB ! -s 10.42.0.0/16 -d 10.43.83.142/32 -p tcp -m comment --comment "cattle-system/rancher-webhook:https cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-BOJCKSINR77JVVPB -m comment --comment "cattle-system/rancher-webhook:https -> 10.42.207.13:9443" -j KUBE-SEP-LASVFMRDUWSGYCGQ
-A KUBE-SVC-BSZMNEG7M6JICBTH ! -s 10.42.0.0/16 -d 10.43.113.211/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:http-web cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-BSZMNEG7M6JICBTH -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:http-web -> 10.42.60.87:8081" -j KUBE-SEP-A2J7EKAZNUIJPVKB
-A KUBE-SVC-D72WHH2PHGEL4SRX ! -s 10.42.0.0/16 -d 10.43.192.58/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-D72WHH2PHGEL4SRX -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web -> 10.42.236.212:8080" -j KUBE-SEP-UVS77VWFGEGINJWJ
-A KUBE-SVC-DAM77X32V24O2EL5 ! -s 10.42.0.0/16 -d 10.43.10.204/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-client:metrics cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-DAM77X32V24O2EL5 -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-client:metrics -> 134.199.165.191:2381" -j KUBE-SEP-T5GDSH5UDNVSBBBD
-A KUBE-SVC-DISNXZXWEI7GIGLU ! -s 10.42.0.0/16 -d 10.43.48.23/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:https-internal cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-DISNXZXWEI7GIGLU -m comment --comment "cattle-system/cattle-cluster-agent:https-internal -> 10.42.207.10:444" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-2BW3IWP2DAO5VI5C
-A KUBE-SVC-DISNXZXWEI7GIGLU -m comment --comment "cattle-system/cattle-cluster-agent:https-internal -> 10.42.207.12:444" -j KUBE-SEP-2THVF4XV5EU3ZPXS
-A KUBE-SVC-ELE3EOWUPGZLKWXO ! -s 10.42.0.0/16 -d 10.43.19.114/32 -p tcp -m comment --comment "longhorn-system/longhorn-frontend:http cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-ELE3EOWUPGZLKWXO -m comment --comment "longhorn-system/longhorn-frontend:http -> 10.42.236.203:8000" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ERQO2O27TXDWHZNK
-A KUBE-SVC-ELE3EOWUPGZLKWXO -m comment --comment "longhorn-system/longhorn-frontend:http -> 10.42.60.88:8000" -j KUBE-SEP-DVNXVWGBLBR54RNF
-A KUBE-SVC-EW6UA3DC2CVRQ4ND ! -s 10.42.0.0/16 -d 10.43.26.63/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-EW6UA3DC2CVRQ4ND -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy -> 10.42.60.85:8080" -j KUBE-SEP-HRQZN5HMG7OT3UJ4
-A KUBE-SVC-EZW4DS5HT4GROINA ! -s 10.42.0.0/16 -d 10.43.113.211/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-EZW4DS5HT4GROINA -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web -> 10.42.60.87:8080" -j KUBE-SEP-WLNEGUPYXN364HXH
-A KUBE-SVC-F3PZ5PNOTTIABLQ5 ! -s 10.42.0.0/16 -d 10.43.162.3/32 -p tcp -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-F3PZ5PNOTTIABLQ5 -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics -> 10.42.20.98:10254" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-AZDPU6ZRXZOAKMMT
-A KUBE-SVC-F3PZ5PNOTTIABLQ5 -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics -> 10.42.236.197:10254" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ZHT3WDXRH2LELU6J
-A KUBE-SVC-F3PZ5PNOTTIABLQ5 -m comment --comment "kube-system/pushprox-ingress-nginx-client:metrics -> 10.42.60.67:10254" -j KUBE-SEP-EVSNOTTPINK5I7GP
-A KUBE-SVC-HP77IKALGGR6UULO ! -s 10.42.0.0/16 -d 10.43.198.51/32 -p tcp -m comment --comment "kube-system/rke2-metrics-server:https cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-HP77IKALGGR6UULO -m comment --comment "kube-system/rke2-metrics-server:https -> 10.42.236.195:10250" -j KUBE-SEP-DZT2I4ZDY7XPOYL6
-A KUBE-SVC-JAGPXAZKZK76XVSE ! -s 10.42.0.0/16 -d 10.43.64.89/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-JAGPXAZKZK76XVSE -m comment --comment "cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics -> 134.199.165.191:10257" -j KUBE-SEP-JQXXHRHTRP43NH2Z
-A KUBE-SVC-JCCTHMVVOJD7CTXD ! -s 10.42.0.0/16 -d 10.43.192.58/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:http-web cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-JCCTHMVVOJD7CTXD -m comment --comment "cattle-monitoring-system/rancher-monitoring-alertmanager:http-web -> 10.42.236.212:9093" -j KUBE-SEP-CRKV7RYZO4CA6CZQ
-A KUBE-SVC-JQ5LIQLHTIZNWLOX ! -s 10.42.0.0/16 -d 10.43.35.174/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-JQ5LIQLHTIZNWLOX -m comment --comment "cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy -> 10.42.236.223:8080" -j KUBE-SEP-UKHW5QX6XGBTFQM4
-A KUBE-SVC-NGSMBSSFRDULITT4 ! -s 10.42.0.0/16 -d 10.43.59.17/32 -p tcp -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-NGSMBSSFRDULITT4 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook -> 10.42.20.95:9501" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-TVCCKNYZOQVB2YRX
-A KUBE-SVC-NGSMBSSFRDULITT4 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook -> 10.42.236.204:9501" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-XVATE2C77IUSW7SZ
-A KUBE-SVC-NGSMBSSFRDULITT4 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook -> 10.42.60.74:9501" -j KUBE-SEP-3MTJL6YLVVP4DUO5
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.42.0.0/16 -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 134.199.165.191:6443" -j KUBE-SEP-CETKDPRB4XVEPXEF
-A KUBE-SVC-NQL64TY2T3FWFXFQ ! -s 10.42.0.0/16 -d 10.43.123.164/32 -p tcp -m comment --comment "longhorn-system/longhorn-backend:manager cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-NQL64TY2T3FWFXFQ -m comment --comment "longhorn-system/longhorn-backend:manager -> 10.42.20.95:9500" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-JDJYFOIQOEVL27VE
-A KUBE-SVC-NQL64TY2T3FWFXFQ -m comment --comment "longhorn-system/longhorn-backend:manager -> 10.42.236.204:9500" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ZWH452QYBB22FZMS
-A KUBE-SVC-NQL64TY2T3FWFXFQ -m comment --comment "longhorn-system/longhorn-backend:manager -> 10.42.60.74:9500" -j KUBE-SEP-VWMAUWN2G3PKN7SD
-A KUBE-SVC-OEKFV6TG6AAIHGRX ! -s 10.42.0.0/16 -d 10.43.214.63/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-OEKFV6TG6AAIHGRX -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 134.199.144.255:9796" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-PWGRZXJTFHT3DEJJ
-A KUBE-SVC-OEKFV6TG6AAIHGRX -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 134.199.165.191:9796" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-HDHKH3WYYOHIW2LM
-A KUBE-SVC-OEKFV6TG6AAIHGRX -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 170.64.187.24:9796" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-LGTKZ2DSVFSMWCDQ
-A KUBE-SVC-OEKFV6TG6AAIHGRX -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 209.38.91.232:9796" -j KUBE-SEP-LKLYRKOCFPASG5FO
-A KUBE-SVC-PUNXDRXNIM3ELMDM ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-PUNXDRXNIM3ELMDM -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 -> 10.42.207.3:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-BMQM5RYMOV3K655N
-A KUBE-SVC-PUNXDRXNIM3ELMDM -m comment --comment "kube-system/rke2-coredns-rke2-coredns:tcp-53 -> 10.42.236.194:53" -j KUBE-SEP-FV26N6VYHXVXEHIW
-A KUBE-SVC-R2YIKPX5C2B4PRH7 ! -s 10.42.0.0/16 -d 10.43.6.31/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-R2YIKPX5C2B4PRH7 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 134.199.144.255:10249" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-CXEJNOA3ZBPRSCR5
-A KUBE-SVC-R2YIKPX5C2B4PRH7 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 134.199.165.191:10249" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-NCRQ3ZFXVKBDYXJ2
-A KUBE-SVC-R2YIKPX5C2B4PRH7 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 170.64.187.24:10249" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-JYDKPX6DVENULHXV
-A KUBE-SVC-R2YIKPX5C2B4PRH7 -m comment --comment "cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 209.38.91.232:10249" -j KUBE-SEP-FKKKRNWJV3IF47YW
-A KUBE-SVC-REY7A7JAMMNC25ZM ! -s 10.42.0.0/16 -d 10.43.172.21/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-REY7A7JAMMNC25ZM -m comment --comment "cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https -> 10.42.236.218:6443" -j KUBE-SEP-RTC2BWWTMSYH5ACW
-A KUBE-SVC-RK657RLKDNVNU64O ! -s 10.42.0.0/16 -d 10.43.29.34/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha -> 134.199.165.191:5473" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-EUDFX5WWRVX5TEST
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha -> 170.64.187.24:5473" -j KUBE-SEP-MZEZYTNEESMXTZ2Q
-A KUBE-SVC-RXZQBFX6IWO22WWW ! -s 10.42.0.0/16 -d 10.43.48.23/32 -p tcp -m comment --comment "cattle-system/cattle-cluster-agent:http cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-RXZQBFX6IWO22WWW -m comment --comment "cattle-system/cattle-cluster-agent:http -> 10.42.207.10:80" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-6LG3EDEMRQHDULPO
-A KUBE-SVC-RXZQBFX6IWO22WWW -m comment --comment "cattle-system/cattle-cluster-agent:http -> 10.42.207.12:80" -j KUBE-SEP-Z62NRHH5E3IPFBI7
-A KUBE-SVC-S4EMHPZ44GDBMEWI ! -s 10.42.0.0/16 -d 10.43.229.143/32 -p tcp -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-S4EMHPZ44GDBMEWI -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook -> 10.42.20.95:9502" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-7MTBWO5YGAMMKMAO
-A KUBE-SVC-S4EMHPZ44GDBMEWI -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook -> 10.42.236.204:9502" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-OGFQMBDAC6TKQTCJ
-A KUBE-SVC-S4EMHPZ44GDBMEWI -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook -> 10.42.60.74:9502" -j KUBE-SEP-W2INZDPAMSHMJ6BH
-A KUBE-SVC-SX5Y67UR33APG6CK ! -s 10.42.0.0/16 -d 10.43.63.193/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-client:metrics cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-SX5Y67UR33APG6CK -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-client:metrics -> 134.199.165.191:10259" -j KUBE-SEP-JH4AWE3MBLQPK244
-A KUBE-SVC-TYVUZ72JN6SHFAXC ! -s 10.42.0.0/16 -d 10.43.51.105/32 -p tcp -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-TYVUZ72JN6SHFAXC -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend -> 10.42.20.95:9503" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-JAGIKREDCOPPMHL4
-A KUBE-SVC-TYVUZ72JN6SHFAXC -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend -> 10.42.236.204:9503" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-CMLJ3UCZ2EWO6T2V
-A KUBE-SVC-TYVUZ72JN6SHFAXC -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend -> 10.42.60.74:9503" -j KUBE-SEP-U75AFFWW4NVNO5AO
-A KUBE-SVC-UDVXCUUPV3TWYDKW ! -s 10.42.0.0/16 -d 10.43.10.180/32 -p tcp -m comment --comment "demo-backend/backend-svc cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-UDVXCUUPV3TWYDKW -m comment --comment "demo-backend/backend-svc -> 10.42.236.219:8080" -j KUBE-SEP-FB7LJIDRQHUZHIGE
-A KUBE-SVC-V6M6RRQXTSHVF7LK ! -s 10.42.0.0/16 -d 10.43.227.236/32 -p tcp -m comment --comment "default/basic-web-svc cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-V6M6RRQXTSHVF7LK -m comment --comment "default/basic-web-svc -> 10.42.60.72:80" -j KUBE-SEP-SU4RI2JQCGIKYJU7
-A KUBE-SVC-VDF2XRPMF7GCOKCC ! -s 10.42.0.0/16 -d 10.43.248.104/32 -p tcp -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-VDF2XRPMF7GCOKCC -m comment --comment "cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy -> 10.42.60.84:8080" -j KUBE-SEP-3SHTPU44VOUWKIZX
-A KUBE-SVC-WSX3IQ6WDZKL2S34 ! -s 10.42.0.0/16 -d 10.43.9.86/32 -p tcp -m comment --comment "cattle-monitoring-system/rancher-monitoring-operator:https cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-WSX3IQ6WDZKL2S34 -m comment --comment "cattle-monitoring-system/rancher-monitoring-operator:https -> 10.42.60.83:10250" -j KUBE-SEP-FBONYXDCZYUS66OX
-A KUBE-SVC-YFPH5LFNKP7E3G4L ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 cluster IP" -j KUBE-MARK-MASQ
-A KUBE-SVC-YFPH5LFNKP7E3G4L -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 -> 10.42.207.3:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-Y7CKTLQYNBT2IHXQ
-A KUBE-SVC-YFPH5LFNKP7E3G4L -m comment --comment "kube-system/rke2-coredns-rke2-coredns:udp-53 -> 10.42.236.194:53" -j KUBE-SEP-4FAGCKTPFUKXVWAR
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o vxlan.calico -m comment --comment "cali:e9dnSgSVNmIcpVhP" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
-A cali-POSTROUTING -o wireguard.cali -m comment --comment "cali:kgfCOPW4UKtzMAmO" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE --random-fully
COMMIT
# Completed on Wed Jan  7 23:34:21 2026
